--- a/desktop.bundles/index/index.html
+++ b/desktop.bundles/index/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="/favicon.ico"/>
 </head>
 <body class="page page__body">
-    <div class="header">header content goes here</div>
+    <div class="header">olololo</div>
     <div class="content bla">main content</div>
     <div class="footer">footer content goes here</div>
     <script src="_index.js"></script>
