--- a/desktop.bundles/index/index.html
+++ b/desktop.bundles/index/index.html
@@ -9,7 +9,9 @@
     <link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body class="page page__body">
-    <div class="header">header content</div>
+    <div class="header i-bem" data-bem='{"header":{ "user": "ololo" }}'>
+        click me
+    </div>
     <div class="content">main content</div>
     <div class="footer">footer content</div>
     <script src="index.min.js"></script>
